--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
+    "@clerk/backend": "^2.16.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/websockets": "^11.1.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "jwks-rsa": "^3.2.0",
     "mongoose": "^8.18.3",
     "openai": "^5.23.1",
     "socket.io": "^4.8.1"
