--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
     "@clerk/backend": "^2.16.0",
+    "@google/genai": "^1.21.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-socket.io": "^11.1.6",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
-    "@types/socket.io": "^3.0.1"
+    "@types/socket.io": "^3.0.1",
+    "typescript": "^5.9.2"
   }
 }
