feat: add Jest testing setup and deployment configuration
- Add Jest configuration for TypeScript testing with NestJS
- Install testing dependencies (@nestjs/testing, jest, ts-jest, @types/jest)
- Add Procfile for production deployment with npm start:prod command
- Configure Jest with proper TypeScript transformation and coverage settings

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,12 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.1.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.6.0",
     "@types/socket.io": "^3.0.1",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.9.2"
   }
 }
