--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/testing": "^11.1.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.6.0",
